--- a/doc/memo/2026/02/02.md
+++ b/doc/memo/2026/02/02.md
@@ -31,14 +31,27 @@
 
 ---
 
+### 4. user.go のテストコード設計・実装
+- `LoginHandler` のテストケースを追加：
+  - 正常系：ログイン成功
+  - 異常系：ユーザーが存在しない
+  - 異常系：パスワードが間違っている
+  - 異常系：JSON形式エラー
+  - 異常系：トークン生成エラー
+- モックの共通化：`mockdb_test.go` を作成し、`MockDB` と `MockTokenGenerator` を集約
+- 依存性注入の導入：`LoginHandler` に `auth.TokenGenerator` を注入し、トークン生成エラーのテストを実現
+- テストループの最適化：`setupMock` と `setupTokenMock` を分離し、責務を明確化
+- **Commit**: `test: Refactor mocks and add login tests with token generation error handling`
+
+---
+
 ## 🔄 次のステップ
 
-### 優先度1：テストコード作成
-- カテゴリ管理の CRUD API テストを作成
-- まずは `POST /categories`（カテゴリ作成）から開始
+### 優先度1：`RegisterHandler` のテストコード作成
+- `RegisterHandler` のテストケースを作成
 
-### 優先度2：ハンドラー実装
-- テストが通るようにハンドラーを実装
+### 優先度2：カテゴリ一覧/更新/削除のハンドラー実装
+- `GET /api/categories`、`PUT /api/categories/:id`、`DELETE /api/categories/:id` を実装
 
 ### 優先度3：商品管理 CRUD API
 - カテゴリと同様の手順で商品管理 API を実装
@@ -53,3 +66,5 @@
 - **Migration 実行方法**: Go スクリプト（`cmd/migrate/main.go`）を使用する案もあったが、最終的に `migrate` CLI で実行
 - **開発手法**: テストコード駆動開発（TDD）
 - **テスト方針**: HTTPモックを使った単体テスト（推奨）
+- **モック管理**: `mockdb_test.go` に共通モックを集約し、テストの責務分離を実現
+- **依存性注入**: トークン生成のテストを可能にするため、`LoginHandler` に `auth.TokenGenerator` を注入
